Slightly updated buttons

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 <body>
     <div class="left-side">
         <button class="reset-button">Reset</button>
+        <p></p>
     </div>
     <div class="squares-container"></div>
     <div class="right-side">
-        <button class="change-squares">More/Less Sqaures</button>
+        <button class="change-grid-size">Change Grid Size</button>
+        <p class="grid-size-display">Current Size: 16x16</p>
     </div>
     
     <script src="./javascript.js"></script>
